--- a/comments/package.json
+++ b/comments/package.json
@@ -13,7 +13,10 @@
   "author": "Leunar Kalludra",
   "dependencies": {
     "@types/express": "^4.16.1",
-    "express": "^4.16.4"
+    "@types/mongoose": "^5.3.20",
+    "express": "^4.16.4",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.17"
   },
   "devDependencies": {
     "nodemon": "^1.18.10",
